--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <meta charset="UTF-8" />
+    <!-- <link rel="icon" href="/favicon.ico" /> -->
+    <link rel="icon" href="./src/assets/icon/favicon-16x16.png" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Pokemon Game</title>
   </head>
   <body>
     <div id="app"></div>
